# MPointer

./: CMakeLists.txt  ListaEnlazada.cpp  MPointer.cpp  MPointer.h  MPointerGC.cpp  MPointerGC.h  RC.cpp  RC.h  README.md  cliente.cpp  cliente.h  main.cpp
Algoritmos de Ordenamiento/: BubbleSort.cpp  BubbleSort.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h
Estructuras de Datos/: ListaDoblementeEnlazada.cpp  ListaDoblementeEnlazada.h  ListaEnlazada.cpp  ListaEnlazada.h
Servidor/: CMakeLists.txt  ListaEnlazadaServidor.cpp  ListaEnlazadaServidor.h  main.cpp
Servidor/nlohmann/: binary_writer.hpp  input_adapters.hpp  iter_impl.hpp  serializer.hpp  to_json.hpp
nlohmann/: adl_serializer.hpp  binary_reader.hpp  detected.hpp  from_json.hpp  internal_iterator.hpp  is_sax.hpp  iteration_proxy.hpp  json.hpp  json_pointer.hpp  json_sax.hpp  lexer.hpp  parser.hpp  serializer.hpp  type_traits.hpp
